--- a/pages/index/addProject/addProject.wxml
+++ b/pages/index/addProject/addProject.wxml
@@ -9,18 +9,18 @@
 				<text class="title">项目时间</text>
 			</view>
 			<view class="rightContent">
-				<picker class="picker" mode="date" value="beginTime" bindchange="startTimedataChange">
+				<picker class="picker" mode="date" value="{{dataLists.beginTime}}" bindchange="beginTimedataChange">
 				    <view>
-				      <text class="text" wx:if="{{beginTime}}">{{beginTime}}</text>
+				      <text class="text" wx:if="{{dataLists.beginTime}}">{{dataLists.beginTime}}</text>
 				    	<text class="text" wx:else>请选择开始时间</text>
 				    	<view class="navigator">
 						    <view class="navigator-arrow"></view>
 						</view>
 				    </view>
 		  		</picker>
-			  	<picker class="picker" mode="date" value="endTime" bindchange="endTimedataChange">
+			  	<picker class="picker" mode="date" value="{{dataLists.endTime}}" bindchange="endTimedataChange">
 				    <view>
-				      <text class="text" wx:if="{{endTime}}">{{endTime}}</text>
+				      <text class="text" wx:if="{{dataLists.endTime}}">{{dataLists.endTime}}</text>
 				    	<text class="text" wx:else>请选择结束时间</text>
 				    	<view class="navigator">
 						    <view class="navigator-arrow"></view>
